Rewrite CSS, fix usage of classes and alignment of the svgs in button

--- a/src/components/quantityInput/quantityInput.css
+++ b/src/components/quantityInput/quantityInput.css
@@ -1,3 +1,38 @@
+.quantityInput {
+  display: flex;
+}
+
+.quantityInput > button {
+  color: white;
+  background: #cf9775;
+  padding: 4px 15px;
+  border: none;
+  display: flex;
+  align-items: center;
+}
+
+.quantityInput > button:first-child {
+  border-radius: 100px 0 0 100px;
+  padding-left: 20px;
+}
+
+.quantityInput > button:last-child {
+  border-radius: 0 100px 100px 0;
+  padding-right: 20px;
+}
+
+.quantityInput > p {
+  padding: 0 20px;
+  font-size: 1.1rem;
+  flex-grow: 1;
+  text-align: center;
+}
+
+.quantityInput > button > svg {
+  fill: #fff;
+}
+
+/*
 * {
   box-sizing: border-box;
 }
@@ -31,3 +66,4 @@
   font-size: 2rem;
   padding: 0 30px;
 }
+*/
